// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

04/17/2010
	r343 [Rytech]
	*Updated settings for sorcerer skills in skill_db.
	*Added cast times for sorcerer's EL skills. Their based on info from iro wiki forums.
	*Changed the max levels for all the elemental spirits skill to 3 as the level used depends
	-on the spirit summoned.

04/17/2010
	r340 [Rytech]
	*Added prices for sorcerer's elemental points and enabled them.
	*Updated SO_EL_CONTROL's max level to 4.
	*Added tags and ID's for a few new found Mercenary skills.
	*Added remaining info and enabled elemental skills. Max levels may need to be raised later.
	*Updated SP requirements for sorcerer skills.
	*Fully updated all sorcerer skill trees to official.
	*Added tags for some new mercenary skills to the source.

04/15/2010
	r336 [Rytech]
	*Fixes and updates to the database.
	-Fixed incorrectly set ID's for baby mounts job bonuses in job_db2.
	-Enabled the elemental spirits monsters in mob_db2. They will remain in here since the client
	-treats them as regular monsters.
	-Assigned ID's to the remaining sorcerer's elemental skills in skill_db and skill_cast_db.
	-Added sorcerer's elemental spirit skills to the skill trees. However the prerequirements
	-wernt added yet as this was added for testing purposes, plus I dont know them yet.

	*Update to source.
	-Small cleanup to the job system. Thanks goes to Pakpil for pointing it out.
	-Added skill tags for remaining sorcerer elemental skills.

04/15/2010
	r330 [Jobbie]
	* Minor fix to Pinpoint Attack. (followed up r329)
	- Snap effect during WoE should not be triggered however this skill is usable as range attack.

04/12/2010
	r323 [pakpil]
	* Fixed SC_AUTOSHADOWSPELL cast time. Bug report 379.
	* Fixed some isequipped() checks on item_db.txt.
	* Fixed exp table in exp.txt.
	- 3rd job have been moved to hadle these by separate.